26 September 2007: Wouter
	- SIGHUP will reopen the log file.
	- Option to log to syslog.

25 September 2007: Wouter
	- tests for NSEC3. Fixup bitmap checks for NSEC3.
	- positive ANY response needs to check if wildcard expansion, and
	  check that original data did not exist.
	- tests for NSEC3 that wrong use of OPTOUT is bad. For insecure
	  delegation, for abuse of child zone apex nsec3.
	- create 0.5 release tag.

24 September 2007: Wouter
	- do not make test programs by default.
	- But 'make test' will perform all of the tests.
	- Advertise builtin select libevent alternative when no libevent
	  is found.
	- signit can generate NSEC3 hashes, for generating tests.
	- multiple nsec3 paramaters in message test.
	- too high nsec3 iterations becomes insecure test.

21 September 2007: Wouter
	- fixup empty_DS_name allocated in wrong region (port DEC Alpha).
	- fixup testcode lock safety (port FreeBSD).
	- removes subscript has type char warnings (port Solaris 9).
	- fixup of field with format type to int (port MacOS/X intel).
	- added test for infinite loop case in nonRD answer validation.
	  It was a more general problem, but hard to reproduce. When an
	  unsigned rrset is being validated and the key fetched, the DS
	  sequence is followed, but if the final name has no DS, then no
	  proof is possible - the signature has been stripped off.

20 September 2007: Wouter
	- fixup and test for NSEC wildcard with empty nonterminals. 
	- makedist.sh fixup for svn info.
	- acl features request in plan.
	- improved DS empty nonterminal handling.
	- compat with ANS nxdomain for empty nonterminals. Attempts the nodata
	  proof anyway, which succeeds in ANS failure case.
	- striplab protection in case it becomes -1.
	- plans for static and blacklist config.

19 September 2007: Wouter
	- comments about non-packed usage.
	- plan for overload support in 0.6.
	- added testbound tests for a failed resolution from the logs
	  and for failed prime when missing glue.