@@ -1,6 +1,7 @@
 26 September 2007: Wouter
 	- SIGHUP will reopen the log file.
 	- Option to log to syslog.
+	- please lint, fixup tests (that went to syslog on open, oops).
 
 25 September 2007: Wouter
 	- tests for NSEC3. Fixup bitmap checks for NSEC3.
